# LakehouseOps-Databricks

./: Makefile  README.md  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
apps/api/app/: db.py  main.py  models.py  schemas.py  security.py  services.py
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
apps/web/src/api/: client.ts
apps/web/src/components/: charts.tsx  ui.tsx
apps/web/src/pages/: AdminPage.tsx  LineagePage.tsx  ModelsPage.tsx  OverviewPage.tsx  QualityPage.tsx  RunsPage.tsx  TablesPage.tsx
apps/web/src/styles/: global.css
apps/web/tests/: screenshots.spec.ts  smoke.spec.ts
docs/: api.md  architecture.md  index.md
scripts/: dev_env.sh  loc_check.py  seed.py  verify.sh
tests/api/: test_api.py
